# community-platform

./: .gitignore  CONTRIBUTING.md  MASTER_SYSTEM_DESIGN.md  Makefile  NextStep.md  PROJECT_ROADMAP.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  roadmap.md  task_4_2_testing_strategy.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-push.yml  ci.yml  codeql.yml
.husky/: pre-commit
apps/gateway-bff/: .env.example  Dockerfile  Makefile  jest.config.js  package.json
apps/gateway-bff/src/: middleware.ts
apps/gateway-bff/tests/: index.test.tsx
docs/: architecture.md  failure-scenarios.md  tradeoffs.md
infra/docker/: docker-compose.dev.yml  docker-compose.yml
infra/docker/prometheus/: prometheus.yml
infra/helm-charts/audit-service/: Chart.yaml  values.yaml
infra/helm-charts/auth-service/: Chart.yaml  values.yaml
infra/helm-charts/brand/: Chart.yaml  values.yaml
infra/helm-charts/cart-crud/: Chart.yaml  values.yaml
infra/helm-charts/cart-pricing/: Chart.yaml  values.yaml
infra/helm-charts/cart-snapshot/: Chart.yaml  values.yaml
infra/helm-charts/category/: Chart.yaml  values.yaml
infra/helm-charts/checkout-orchestrator/: Chart.yaml  values.yaml
infra/helm-charts/config/: Chart.yaml  values.yaml
infra/helm-charts/discount-engine/: Chart.yaml  values.yaml
infra/helm-charts/email-service/: Chart.yaml  values.yaml
infra/helm-charts/gateway-bff/: Chart.yaml  values.yaml
infra/helm-charts/intent-parser/: Chart.yaml  values.yaml
infra/helm-charts/inventory-read/: Chart.yaml  values.yaml
infra/helm-charts/inventory-write/: Chart.yaml  values.yaml
infra/helm-charts/invoice/: Chart.yaml  values.yaml
infra/helm-charts/list-price/: Chart.yaml  values.yaml
infra/helm-charts/log-forwarder/: Chart.yaml  values.yaml
infra/helm-charts/metrics/: Chart.yaml  values.yaml
infra/helm-charts/order-create/: Chart.yaml  values.yaml
infra/helm-charts/order-read/: Chart.yaml  values.yaml
infra/helm-charts/payment-gateway/: Chart.yaml  values.yaml
infra/helm-charts/plan-executor/: Chart.yaml  values.yaml
infra/helm-charts/plan-generator/: Chart.yaml  values.yaml
infra/helm-charts/product-read/: Chart.yaml  values.yaml
infra/helm-charts/product-write/: Chart.yaml  values.yaml
infra/helm-charts/push-service/: Chart.yaml  values.yaml
infra/helm-charts/rec-model-service/: Chart.yaml  values.yaml
infra/helm-charts/refund/: Chart.yaml  values.yaml
infra/helm-charts/search-index/: Chart.yaml  values.yaml
infra/helm-charts/search-query/: Chart.yaml  values.yaml
infra/helm-charts/sms-service/: Chart.yaml  values.yaml
infra/helm-charts/tax-calculation/: Chart.yaml  values.yaml
infra/k8s/: kustomization.yaml
scripts/: generate_proto.sh
services/ai/plan-generator/: Dockerfile  pyproject.toml
services/ai/plan-generator/plan_generator/: main.py  product_pb2.py
services/catalog/product-lookup-rust/: Cargo.toml  build.rs
services/catalog/product-lookup-rust/src/: lib.rs  main.rs
services/catalog/product-lookup-rust/tests/: unit_tests.rs
services/checkout/checkout-orchestrator/: Dockerfile  pyproject.toml
services/checkout/checkout-orchestrator/checkout_orchestrator/: catalog_events_pb2.py  dependencies.py  main.py
services/checkout/checkout-orchestrator/checkout_orchestrator/api/endpoints/: checkout.py
services/checkout/checkout-orchestrator/checkout_orchestrator/api/schemas/: checkout.py  saga.py
services/checkout/checkout-orchestrator/checkout_orchestrator/core/: kafka_consumer.py
services/checkout/checkout-orchestrator/checkout_orchestrator/core/services/: checkout_service.py
services/checkout/checkout-orchestrator/checkout_orchestrator/infrastructure/repositories/: saga_repository.py
services/checkout/checkout-orchestrator/tests/core/services/: test_checkout_service.py
services/inventory-service/: Cargo.toml  Dockerfile
services/inventory/inventory-read/: Cargo.toml  Dockerfile
services/inventory/inventory-read/src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
services/inventory/inventory-read/src/api/: health.rs  inventory.rs  mod.rs
services/inventory/inventory-read/src/domain/: mod.rs  model.rs  service.rs
services/inventory/inventory-read/src/infrastructure/: mod.rs  repository.rs
services/inventory/inventory-write/: Cargo.toml  Dockerfile  init.sql
services/inventory/inventory-write/.sqlx/: query-0a51d25f77c0861c93aa3ba0d02636d58df1891dab69af7840afa3c693ccf40f.json
services/inventory/inventory-write/src/: config.rs  error.rs  kafka_consumer.rs  lib.rs  main.rs  telemetry.rs
services/inventory/inventory-write/src/api/: health.rs  inventory.rs  mod.rs
services/inventory/inventory-write/src/domain/: mod.rs  model.rs  service.rs
services/inventory/inventory-write/src/infrastructure/: mod.rs  repository.rs
services/product-service/: Dockerfile  pom.xml
services/search/search-query/: Cargo.toml  Dockerfile
services/search/search-query/src/: main.rs
services/user-service/: Dockerfile  main.py
shared/proto/: catalog_events.proto  checkout_events.proto  order_events.proto  product.proto  product_lookup.proto
(+633 files in other folders)
