[project]
name = "plan-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "NitheshChakaravarthySeelan",email = "albertnitheesh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic[dotenv] (>=2.12.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "prometheus-client"
]

[tool.poetry.dev-dependencies]
black = "^24.4.2"
ruff = "^0.4.8"
pytest = "^8.2.2"

[tool.poetry]
packages = [{include = "plan_generator", from = "src"}]

[tool.poetry.scripts]
generate-proto = "bash -c \"make -C ../../../.. generate-proto-python\""
lint = "ruff check ."
format = "black ."
test = "pytest"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
