[package]
name = "inventory-write"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.21" }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry-prometheus = "0.14"
metrics-exporter-prometheus = "0.13"

# Core Web and Database Dependencies
actix-web = "4.5.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
uuid = { version = "1.7", features = ["v4", "serde"] }
dotenvy = "0.15" # For managing .env files for configuration
env_logger = "0.11" # For logging
log = "0.4" # Add the log crate
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.7"
rdkafka = { version = "0.36", features = ["ssl", "sasl"] }
prost = "0.12"
tonic = "0.11"
time = { version = "0.3", features = ["serde-well-known", "macros"] }
config = "0.13"
prometheus = { version = "0.13", features = ["process"] }
chrono = { version = "0.4", features = ["serde"] } # Added chrono dependency